src/scss/index.scss
@import url('https://fonts.googleapis.com/css2?family=Judson:ital,wght@0,400;0,700;1,400&family=Quando&display=swap');

$font-family-head: "Judson", serif;
$font-family-body: "Quando", sans-serif;
$font-family-body-b: "Judson", serif;


/*$background-colour: #333333;
$box-colour: #111111;
$text-colour: #bbbbbb;*/

:root {
    --background-colour: #333333;
    --mane-grad-left: linear-gradient(to right, #662d8a 33.33%, #ed438d 33.33% 66%, #273873 33% 66%);
    --mane-grad-right: linear-gradient(to right, #273873 33.33%, #ed438d 33.33% 66%, #662d8a 33% 66%);
    --text-colour: #bbbbbb;
    --box-colour: #111111;
    --background-pattern: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ffffff' fill-opacity='0.05' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
    --border-colour: #bbbbbb;
    --search-colour: #bbbbbb;
    --search-text-colour: #111111;
    --button-colour: #bbbbbb;
    --button-text-colour: #111111;
    --button-border-colour: #111111;
    --head-text-colour: #bbbbbb;
    --aside-colour: #333333;
    --aside-text-colour: #bbbbbb;
    --hr-colour: #bbbbbb;
    --link-hover-colour: lightgray;
    --highlight-colour: lightgray;
}

html[data-theme='light'] {
    --background-colour: #eeedb4;
    --mane-grad-left: linear-gradient(to right, #ecbb48 33.33%, #e68c40 33.33% 66%, #cb502d 33% 66%);
    --mane-grad-right: linear-gradient(to right, #cb502d 33.33%, #e68c40 33.33% 66%, #ecbb48 33% 66%);
    --box-colour: #ede8ed;
    --text-colour: #000000;
    --background-pattern: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23cb502d' fill-opacity='0.05' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
    --border-colour: #ecbb48;
    --search-colour: #eeedb4;
    --search-text-colour: #111111;
    --button-colour: #cb502d;
    --button-text-colour: #ede8ed;
    --button-border-colour: #cb502d;
    --head-text-colour: #000000;
    --aside-colour: #cb502d;
    --aside-text-colour: #ede8ed;
    --hr-colour: #cb502d;
    --link-hover-colour: #e68c40;
    --highlight-colour: #cb502d;

}

html[data-theme='dark'] {
    --background-colour: #0c0319;
    --mane-grad-left: linear-gradient(to right, #471785 33.33%, #4a53bc 33.33% 66%, #6888f7 33% 66%);
    --mane-grad-right: linear-gradient(to right, #6888f7 33.33%, #4a53bc 33.33% 66%, #471785 33% 66%);
    --box-colour: #030f0d;
    --text-colour: #b3b3b3;   
    --border-colour: #471785;
    --search-colour: #eeeeee;
    --search-text-colour:  #030f0d;
    --button-colour: #6888f7;
    --button-text-colour: #eeeeee;
    --button-border-colour: #471785;
    --head-text-colour: #eeeeee;
    --aside-colour: #6888f7;
    --aside-text-colour: #eeeeee;
    --hr-colour: #6888f7;
    --link-hover-colour: #4a53bc;
    --highlight-colour: #6888f7;
  }

body, #root, .App {
	z-index: -10000000;
	position: relative;
	margin: 0;
	font-family: #{$font-family-body};
	font-size: 1.2rem;
	min-height: 100vh;
}

body {
	background-color: var(--background-colour);
	background-image: var(--background-pattern);
	color: var(--text-colour);
}

body, html {
	height: 100%;
}

.App {
	overflow: visible;
	
	width: 80%;
	max-width: 80rem;
	margin: 0 auto;
	background-color: var(--box-colour);
	border-right: 1px solid var(--border-colour);
	display: -webkit-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: column;
    flex-direction: column;
}

header {
	padding-left: 1rem;
	display: flex;
	flex-flow: row-reverse wrap;
	justify-content: space-between;

	.site-name {
		margin: .5rem auto 1.5rem 1rem;

		h1 {
			margin: 0;
			padding-right: 1rem;
			font-family: #{$font-family-head};
			font-weight: 400;
			font-style: italic;
			font-size: 3.8rem;
			color: var(--head-text-colour);

			a {
				text-decoration: none;
				&:hover {
				  text-decoration: none;
				}

				&:active {
				  text-decoration: none;
				}
			}
		}

		h4 {
			margin: 0;
			font-family: #{$font-family-body};
			font-size: 1rem;
			color: var(--head-text-colour);
			position: relative;
			top: -.5rem;
		}

	}

	aside {
		height: 1.7rem;
		padding: .5rem .5rem .5rem .7rem;
		border-top: none;
		border-right: none;
		border-radius: 0 0 0 10px;
		text-align: center;
		background-color: var(--aside-colour);
		color: var(--aside-text-colour);
		display: block;
		width: 5rem;
		white-space: nowrap;
		
	}
}

footer {
	padding: 0 2rem 0 2rem;
	font-size: 1rem;

	a {
		text-decoration: underline;
		font-weight: normal;
	}
}

hr {
	border: 1px solid var(--hr-colour);
}

p {
	font-family: #{$font-family-body-b};
}

small {
		font-family: #{$font-family-body-b};
		font-size: 1.2rem;
	}

a {
	text-decoration: none;
	font-weight: bold;

	&:link {
	  color: inherit;
	}

	&:visited {
	  color: inherit;
	}

	&:hover {
	  color: var(--link-hover-colour);
	  text-decoration: underline;
	}

	&:active {
	  color: var(--text-colour);
	  text-decoration: underline;
	}
}

.search-bar {
	text-align: center;
	flex: 1 0 auto;
	padding: 0 1rem 1rem 1rem;

	input[type="search"] {
		height: 3rem;
		width: 70%;
		font-size: 1.5rem;
		background-color: var(--search-colour);
		color: var(--search-text-colour);
		padding-left: 1rem;
		margin-right: 0;
		border-radius: 10px;
		border: 2px solid var(--border-colour);
		border-color: var(--border-colour);


	}

	button {
		height: 3rem;
		padding: 0 .7rem;
		font-size: 1.5rem;
		margin-left: .5rem;
		background-color: var(--button-colour);
		color: var(--button-text-colour);
		cursor: pointer;
		border-radius: 10px;
		border: 2px solid var(--button-border-colour);
		font-family: #{$font-family-body-b};
		&:hover {
			color: var(--link-hover-colour);
		}
	}
}

.results-box {
	padding: 1rem;

	.line-box {
		max-width: 90%;
		margin: 0 auto 0 auto;
		padding: 1rem 1rem 1rem 1rem;
		font-size: 1.1rem;
		border-radius: 10px;

		& > div {
			margin: .3rem 0 0 0;
		}

		button {
			all: unset;
			padding: .1rem .2rem;
			cursor: pointer;
			text-decoration: none;
			font-weight: bold;

			&:hover {
				color: var(--link-hover-colour);
			}

			.bi-link-45deg {
				position: relative;
				top: 5px;
				padding-left: 1px;
			}

			.bi-copy {
				padding-left: 4px;
			}
		}

		&.highlighted {
			border-top: 3px solid var(--highlight-colour);
			border-bottom: 3px solid var(--highlight-colour);
			background-color: var(--background-colour);
			background-image: var(--background-pattern);
		}
	}
}

.style-switch {
	button {
		all: unset;
		color: inherit;
		height: 1.5rem;
		width: 1.5rem;
		cursor: pointer;
		border-color: var(--box-colour);
		border-radius: 5px;
		width: 20px;
		&:hover {
			color: var(--link-hover-colour);
		}
	}
}

.manebar {
		width: 1rem;
   	position: absolute;
   	top: 0px;
   	bottom: 0px;

   	&.left {
   		left: -.5rem;
   		background-image: var(--mane-grad-left);
   	}
   	&.right {
   		right: -.5rem;
   		background-image: var(--mane-grad-right);
   	}	
}

svg {
	position: relative;
	top: 3px;
}

#to-top {
	position: fixed;
	right: 1rem;
	bottom: 1rem;

	&.hidden {
		display: none;
	}

	button {
		all: unset;
		cursor: pointer;
		color: var(--button-colour);
		background-color: var(--border-colour);
		border-radius: 5px;
		padding: 0 3px;
		svg {
			position: relative;
			top: 2.5px;
		}
	}
}

#copy-notif {
	position: fixed;
	bottom: -3rem;
	left: 50%;
	transform: translate(-50%, 0);
	padding: .5rem 2rem;
	background-color: var(--aside-colour);
	color: var(--aside-text-colour);
	border-radius: 10px 10px 0 0;
	border: 2px solid var(--border-colour);
	border-bottom: none;
	height: 1.5rem;
	font-size: 1.3rem;
	transition: bottom .5s;

	&.shown {
		bottom: 0;
	}

	p {
		font-family: #{$font-family-body-b};
		margin: 0;
	}
}

.page {
	padding: 2rem;
	padding-top: 0;
	flex: 1 0 auto;

	h2 {
		margin-bottom: 1rem;
		font-size: 1.9rem;
	}

	h3 {
		margin-bottom: .5rem;
	}

	p, ul {
		margin-top: .2rem;
		font-size: 1.3rem;
	}

	li {
		font-family: #{$font-family-body-b};
	}

	a {
		text-decoration: underline;
	}
}

.err-box {
	padding: .5rem;
	color: black;
	background-color: #ffcccc;
	border: 2px solid #cc0000;
	border-radius: 10px;

	a {
		text-decoration: underline;
	}
}

@media screen and (max-width: 840px) {
  .search-bar {
		input[type="search"] {
			width: 95%;
			font-size: 1.1rem;
		}

		button {
			margin-top: .5rem;
			margin-left: 0;
		}
	}
}

@media screen and (max-width: 600px) {
	.App {
		overflow: visible;
		
		width: 90%;
	}
	header {
		.site-name {
			h1 {
				font-size: 2.5rem;
			}

			h4 {
				font-size: .9rem;
			}
		}
	}
}

